# kraken-async-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: live_amend_order.rs  live_batch_cancel.rs  live_closed_orders_request.rs  live_open_orders_request.rs  live_public_endpoint_request.rs  live_public_wss_listening.rs  live_query_orders_info.rs  live_retrieving_recent_trades.rs  live_retrieving_user_trades.rs  live_trading.rs  live_wss_amend_order.rs  live_wss_balances.rs  live_wss_balances_v2.rs  live_wss_book.rs  live_wss_book_v2.rs  live_wss_executions.rs  live_wss_executions_v2.rs  live_wss_l3.rs  live_wss_ohlc.rs  live_wss_ohlc_v2.rs  live_wss_open_orders.rs  live_wss_trades.rs  live_wss_trading.rs  live_wss_trading_v2.rs
scripts/: README.md  closed_orders.py  constants.py  order_ids.py  timestamps.py  transfer_ids.py
src/: lib.rs  request_types.rs  response_types.rs
src/clients/: core_kraken_client.rs  errors.rs  http_response_types.rs  kraken_client.rs  mod.rs  rate_limited_kraken_client.rs
src/clients/test_clients/: mock_kraken_client.rs  mod.rs  test_client.rs
src/crypto/: mod.rs  nonce_provider.rs  nonce_request.rs  secrets.rs  signatures.rs
src/rate_limiting/: keyed_rate_limits.rs  mod.rs  trading_rate_limits.rs  ttl_cache.rs
src/secrets/: mod.rs  secrets_provider.rs
src/test_data/: mod.rs  rate_limits.rs  test_auth.rs  test_client_impl.rs  test_client_impl_err.rs  test_macros.rs  wss_messages.rs  wss_testing.rs
src/test_data/rest_responses/: account_response_json.rs  earn_json.rs  funding.rs  paginated_closed_orders.rs  public_response_json.rs  sub_accounts_json.rs  trading_response_json.rs  websockets_json.rs
src/test_support/: logging.rs
src/wss/: errors.rs  kraken_wss_client.rs  kraken_wss_types.rs  mod.rs  parsing.rs  subscribe_messages.rs
src/wss/messages/: base_messages.rs  market_data_messages.rs  mod.rs  trading_messages.rs  user_data_messages.rs
src/wss/private/: messages.rs  mod.rs  open_orders_messages.rs  own_trades_messages.rs  trading_messages.rs
src/wss/public/: messages.rs  mod.rs  orderbooks.rs
src/wss/v2/: admin_messages.rs  base_message.rs  base_messages.rs  kraken_wss_client.rs  market_data_messages.rs  mod.rs  trading_messages.rs  user_data_messages.rs
tests/: account_core_kraken_client_tests.rs  account_rate_limited_kraken_client_tests.rs  core_kraken_client_tests.rs  earn_kraken_client_tests.rs  earn_rate_limited_client_tests.rs  enum_tests.rs  error_tests.rs  funding_core_kraken_client_tests.rs  funding_rate_limited_kraken_client_tests.rs  mod.rs  public_core_kraken_client_tests.rs  public_rate_limited_client_tests.rs  rate_limited_kraken_client_tests.rs  subaccounts_core_kraken_client_tests.rs  subaccounts_rate_limited_kraken_client_tests.rs  trading_core_kraken_client_tests.rs  trading_rate_limited_kraken_client_tests.rs  websockets_core_kraken_client_tests.rs  websockets_rate_limited_kraken_client_tests.rs  wss_client_core_tests.rs  wss_parsing_tests.rs
tests/resources/: mod.rs  test_auth.rs  test_logging.rs  test_serde.rs
tests/resources/kraken_responses/: account_response_json.rs  earn_json.rs  errors.rs  mod.rs  paginated_closed_orders.rs  sub_accounts_json.rs  trading_response_json.rs  websockets_json.rs
tests/resources/test_client/: mod.rs  test_client_impl.rs  test_client_impl_err.rs
tests/resources/wss/: responses.rs
tests/wss/: mod.rs  test_errors.rs
tests/wss_v2/: admin_tests.rs  error_tests.rs  market_data_tests.rs  mod.rs  shared.rs  subscription_tests.rs  trading_tests.rs  user_data_tests.rs
