[package]
name = "kraken-async-rs"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "An async REST and WSS client for the Kraken Pro APIs"
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/kraken-async-rs"
keywords = ["tokio", "async", "kraken", "trading", "crypto"]
categories = ["asynchronous", "finance", "api-bindings"]
exclude = [".idea", ".gitignore", ".github", ".env", "*.log", "scripts"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.4", features = ["full", "client-legacy", "tokio"] }
http-body-util = "0.1.1"
hyper-tls = "0.6.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = [] }
url = "2.5.0"
serde_with = { version = "3.8.1", features = ["time_0_3"] }
serde_tuple = "0.5.0"
tracing = "0.1.40"
secrecy = "0.8.0"
async-rate-limit = "0.0.4"
simple-builder = "0.0.2"
to-query-params = "0.0.4"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
serde-this-or-that = "0.4.2"
time = { version = "0.3.36", features = ["serde", "macros", "parsing"] }
rust_decimal = { version = "1.35.0", features = ["serde-with-str", "serde-with-float"] }
rust_decimal_macros = "1.34.2"

[dev-dependencies]
wiremock = "0.6.0"
tracing-subscriber = "0.3.18"
ws-mock = "0.1.1"
