[package]
name = "kraken-async-rs"
version = "0.4.2"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "An async REST and WSS client for the Kraken Pro APIs"
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/kraken-async-rs"
keywords = ["tokio", "async", "kraken", "trading", "crypto"]
categories = ["asynchronous", "finance", "api-bindings"]
exclude = [".idea", ".gitignore", ".github", ".env", "*.log", "scripts"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full", "client-legacy", "tokio"] }
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121", features = [] }
url = "2.5.2"
serde_with = { version = "3.9.0", features = ["time_0_3"] }
serde_tuple = "0.5.0"
tracing = "0.1.40"
secrecy = { version = "0.8.0", features = ["default", "serde"] }
async-rate-limit = "0.1.0"
simple-builder = "0.0.2"
to-query-params = "0.0.4"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
serde-this-or-that = "0.4.2"
time = { version = "0.3.36", features = ["serde", "macros", "parsing"] }
rust_decimal = { version = "1.35.0", features = ["serde-with-str", "serde-with-float"] }
rust_decimal_macros = "1.35.0"
tracing-subscriber = { version = "0.3.18", optional = true }

[dev-dependencies]
wiremock = "0.6.1"
ws-mock = "0.2.0"

[features]
default = ["test-support"]
debug-inbound = []
debug-outbound = []
test-support = ["dep:tracing-subscriber"]
